--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -109,7 +109,6 @@
       border-radius: 15px;
       animation: floating 4s ease-in-out infinite;
     }
-    /* Animation flottante */
     @keyframes floating {
       0%   { transform: translateY(0px); }
       50%  { transform: translateY(-15px); }
@@ -126,7 +125,6 @@
       border-top-right-radius: 20px;
       animation: fadeIn 1.5s ease-in;
     }
-    /* Bouton retour en haut */
     #topBtn {
       display: none;
       position: fixed;
@@ -143,7 +141,6 @@
       z-index: 999;
     }
     #topBtn:hover { background: #fbc2eb; }
-    /* Texte effet machine à écrire */
     #typing {
       margin-top: 10px;
       font-size: 1.2em;
@@ -155,97 +152,96 @@
   <header>
     <h1>Bouziani Imane</h1>
     <p id="typing"></p>
-    <p>|  bouzianiimane1@gmail.com |  +213 664 64 77 79 | WhatsApp : 0673945830  | Oran, Algérie  |</p>
+    <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
   </header>
 
   <nav>
-    <a href="#education"><i class="fa-solid fa-graduation-cap"></i> Éducation</a>
-    <a href="#experience"><i class="fa-solid fa-briefcase"></i> Expérience</a>
-    <a href="#skills"><i class="fa-solid fa-laptop-code"></i> Compétences</a>
-    <a href="#languages"><i class="fa-solid fa-language"></i> Langues</a>
-    <a href="#activities"><i class="fa-solid fa-star"></i> Activités</a>
-    <a href="#qualities"><i class="fa-solid fa-heart"></i> Qualités</a>
+    <a href="#education"><i class="fa-solid fa-graduation-cap"></i> Education</a>
+    <a href="#experience"><i class="fa-solid fa-briefcase"></i> Experience</a>
+    <a href="#skills"><i class="fa-solid fa-laptop-code"></i> Skills</a>
+    <a href="#languages"><i class="fa-solid fa-language"></i> Languages</a>
+    <a href="#activities"><i class="fa-solid fa-star"></i> Activities</a>
+    <a href="#qualities"><i class="fa-solid fa-heart"></i> Qualities</a>
   </nav>
 
   <section id="education" data-aos="fade-up">
-    <h2><i class="fa-solid fa-graduation-cap"></i> Éducation</h2>
-    <div class="illustration"><img src="images/college project-bro.svg" alt="Éducation"></div>
+    <h2><i class="fa-solid fa-graduation-cap"></i> Education</h2>
+    <div class="illustration"><img src="images/college project-bro.svg" alt="Education"></div>
     <ul>
-      <li>Master en Intelligence Artificielle – Mention Très Bien (2025)</li>
-      <li>Licence en Informatique – Systèmes d’Information (2023)</li>
-      <li>Certificat Label Startup – Projet IA appliqué aux véhicules intelligents (2023)</li>
-      <li>Certification STEAM – Intégration de l’IA dans les programmes éducatifs</li>
+      <li>Master in Artificial Intelligence – With Distinction (2025)</li>
+      <li>Bachelor in Computer Science – Information Systems (2023)</li>
+      <li>Startup Label Certificate – AI Project applied to Intelligent Vehicles (2023)</li>
+      <li>STEAM Certification – AI Integration in Educational Programs</li>
     </ul>
   </section>
 
   <section id="experience" data-aos="fade-up">
-    <h2><i class="fa-solid fa-briefcase"></i> Expérience Professionnelle</h2>
-    <div class="illustration"><img src="images/Pair programming-bro.svg" alt="Travail"></div>
+    <h2><i class="fa-solid fa-briefcase"></i> Professional Experience</h2>
+    <div class="illustration"><img src="images/Pair programming-bro.svg" alt="Work"></div>
     <ul>
-      <li>Spécialiste IT – ZHONGMA International Construction (2023 – 2025)</li>
-      <li>Spécialiste IT – Clinique Neurologie Privée (2024 – 2025)</li>
-      <li>Stage Imagerie Médicale – Clinique Radiologie Privée (2025)</li>
-      <li>Enseignante STEAM & Programmation – Université (2022 – 2023)</li>
-      <li>Fondatrice & Présidente – Club Scientifique Auto Tech (2022 – 2024)</li>
+      <li>IT Specialist – ZHONGMA International Construction (2023 – 2025)</li>
+      <li>IT Specialist – Private Neurology Clinic (2024 – 2025)</li>
+      <li>Internship in Medical Imaging – Private Radiology Clinic (2025)</li>
+      <li>STEAM & Programming Lecturer – University (2022 – 2023)</li>
+      <li>Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
     </ul>
   </section>
 
   <section id="skills" data-aos="fade-up">
-    <h2><i class="fa-solid fa-laptop-code"></i> Compétences Techniques</h2>
-    <div class="illustration"><img src="images/Data extraction-amico.svg" alt="Compétences"></div>
+    <h2><i class="fa-solid fa-laptop-code"></i> Technical Skills</h2>
+    <div class="illustration"><img src="images/Data extraction-amico.svg" alt="Skills"></div>
     <ul>
-      <li>Langages : Python, Java, C/C++, Dart, Swift, R, MATLAB, SQL, HTML, CSS, JavaScript</li>
-      <li>IA & Data Science : TensorFlow, PyTorch, Keras, Scikit-Learn, OpenCV...</li>
-      <li>Bases de données : MySQL, Oracle, SQL Server</li>
-      <li>Outils 3D & Simulation : Unity, Unreal Engine, Blender, MATLAB Simulink</li>
-      <li>Systèmes & Réseaux : Windows, Linux, Wireshark, cybersécurité</li>
+      <li>Languages: Python, Java, C/C++, Dart, Swift, R, MATLAB, SQL, HTML, CSS, JavaScript</li>
+      <li>AI & Data Science: TensorFlow, PyTorch, Keras, Scikit-Learn, OpenCV...</li>
+      <li>Databases: MySQL, Oracle, SQL Server</li>
+      <li>3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
+      <li>Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
     </ul>
   </section>
 
   <section id="languages" data-aos="fade-up">
-    <h2><i class="fa-solid fa-language"></i> Langues</h2>
-    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Langues"></div>
+    <h2><i class="fa-solid fa-language"></i> Languages</h2>
+    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Languages"></div>
     <ul>
-      <li>Arabe : Natif</li>
-      <li>Anglais : Avancé</li>
-      <li>Français : Professionnel</li>
+      <li>Arabic: Native</li>
+      <li>English: Advanced</li>
+      <li>French: Professional</li>
     </ul>
   </section>
 
   <section id="activities" data-aos="fade-up">
-    <h2><i class="fa-solid fa-star"></i> Activités & Réalisations</h2>
+    <h2><i class="fa-solid fa-star"></i> Activities & Achievements</h2>
     <div class="illustration">
-      <img src="images/people creating robot-bro.svg" alt="Activités 1">
-      <img src="images/Kids Studying from Home-bro.svg" alt="Activités 2">
-      <img src="images/Doctor-bro.svg" alt="Activités 3">
+      <img src="images/people creating robot-bro.svg" alt="Activity 1">
+      <img src="images/Kids Studying from Home-bro.svg" alt="Activity 2">
+      <img src="images/Doctor-bro.svg" alt="Activity 3">
     </div>
     <ul>
-      <li>Participation à des hackathons internationaux (IA, Robotique, Data Science)</li>
-      <li>Organisation d’ateliers IA & Programmation (STEM & Women in Tech)</li>
-      <li>Développement d’un jeu éducatif 3D</li>
-      <li>Conception de systèmes de diagnostic médical basés sur l’IA</li>
+      <li>Participation in international hackathons (AI, Robotics, Data Science)</li>
+      <li>Organization of AI & Programming workshops (STEM & Women in Tech)</li>
+      <li>Development of an educational 3D game</li>
+      <li>Design of AI-based medical diagnostic systems</li>
     </ul>
   </section>
 
   <section id="qualities" data-aos="fade-up">
-    <h2><i class="fa-solid fa-heart"></i> Qualités Professionnelles</h2>
-    <div class="illustration"><img src="images/Blog post-bro.svg" alt="Qualités"></div>
+    <h2><i class="fa-solid fa-heart"></i> Professional Qualities</h2>
+    <div class="illustration"><img src="images/Blog post-bro.svg" alt="Qualities"></div>
     <ul>
-      <li>Autonome │ Créative │ Rigoureuse │ Dynamique │ Esprit d’équipe │ Analytique</li>
+      <li>Independent │ Creative │ Rigorous │ Dynamic │ Team Spirit │ Analytical</li>
     </ul>
   </section>
 
   <footer>
-    <h3 style="margin-top:20px; color:white; font-weight:600;"> Remerciements</h3>
+    <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
     <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
-      Merci à ma maman et à mon papa pour leur amour et leur soutien infini 🤍
+      Thanks to my mom and dad for their endless love and support 🤍
     </p>
   </footer>
   <footer>
     <p>@ Bouziani Imane.com - 2025</p>
   </footer>
 
-  <!-- Bouton retour en haut -->
   <button id="topBtn"><i class="fa-solid fa-arrow-up"></i></button>
 
   <!-- Scripts -->
@@ -253,8 +249,8 @@
   <script>
     AOS.init({ duration: 1000, once: true });
 
-    // Effet machine à écrire
-    const text = " Ingénieure en Intelligence Artificielle ";
+    // Typing effect
+    const text = " Artificial Intelligence Engineer ";
     let i = 0;
     function typeWriter() {
       if (i < text.length) {
@@ -265,7 +261,7 @@
     }
     typeWriter();
 
-    // Bouton retour en haut
+    // Back to top button
     const btn = document.getElementById("topBtn");
     window.onscroll = () => {
       if (document.documentElement.scrollTop > 200) {
