--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     <ul>
       <li>Master in Artificial Intelligence – With Distinction (2025)</li>
       <li>Bachelor in Computer Science – Information Systems (2023)</li>
-      <li>Startup Label Certificate – AI Project applied to Intelligent Vehicles (2023)</li>
-      <li>STEAM Certification – AI Integration in Educational Programs</li>
+      <li>Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles (2023)</li>
+      <li>STEAM Certification – Designing Creative Educational Programs for Learners</li>
     </ul>
   </section>
 
@@ -184,6 +184,8 @@
       <li>Internship in Medical Imaging – Private Radiology Clinic (2025)</li>
       <li>STEAM & Programming Lecturer – University (2022 – 2023)</li>
       <li>Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
+      <li>Medical equipment operator specialized in neurology for 03 years </li>
+      <li>Assistant and manager in a pharmacy  </li>
     </ul>
   </section>
 
@@ -218,9 +220,9 @@
     </div>
     <ul>
       <li>Participation in international hackathons (AI, Robotics, Data Science)</li>
-      <li>Organization of AI & Programming workshops (STEM & Women in Tech)</li>
-      <li>Development of an educational 3D game</li>
-      <li>Design of AI-based medical diagnostic systems</li>
+      <li>Organization of AI & Programming workshops for different proficiency levels</li>
+      <li>Development and creation of educational 3D games using Unreal Engine and Unity 3D</li>
+      <li>Design of AI-powered diagnostic systems using medical imaging </li>
     </ul>
   </section>
 
@@ -274,3 +276,4 @@
   </script>
 </body>
 </html>
+
