--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
     <h2><i class="fa-solid fa-graduation-cap"></i> Education</h2>
     <div class="illustration"><img src="images/college project-bro.svg" alt="Education"></div>
     <ul>
-      <li>Master in Artificial Intelligence – With Distinction (2025)</li>
-      <li>Bachelor in Computer Science – Information Systems (2023)</li>
-      <li>Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles (2023)</li>
-      <li>STEAM Certification – Designing Creative Educational Programs for Learners</li>
+      <li>Master in Artificial Intelligence – With Distinction -2025</li>
+      <li>Bachelor in Computer Science – Information Systems -2023</li>
+      <li>Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles -2023</li>
+      <li>STEAM Certification – Designing Creative Educational Programs for Learners-2023</li>
     </ul>
   </section>
 
@@ -276,4 +276,5 @@
   </script>
 </body>
 </html>
+
 
