--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <li>STEAM & Programming Lecturer – University (2022 – 2023)</li>
       <li>Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
       <li>Medical equipment operator specialized in neurology for 03 years </li>
-      <li>Assistant and manager in a pharmacy  </li>
+      <li>Pharmacy Assistant and Operations Manager </li>
     </ul>
   </section>
 
@@ -223,6 +223,7 @@
       <li>Organization of AI & Programming workshops for different proficiency levels</li>
       <li>Development and creation of educational 3D games using Unreal Engine and Unity 3D</li>
       <li>Design of AI-powered diagnostic systems using medical imaging </li>
+      <li>Development of professional websites, web pages, and inventory management softwares </li>
     </ul>
   </section>
 
@@ -276,5 +277,6 @@
   </script>
 </body>
 </html>
+
 
 
