--- a/index.html
+++ b/index.html
@@ -234,7 +234,20 @@
       <li>Independent │ Creative │ Rigorous │ Dynamic │ Team Spirit │ Analytical</li>
     </ul>
   </section>
-
+<section id="cv" data-aos="fade-up">
+  <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
+  <div class="illustration">
+    <img src="images/resume-bro.svg" alt="CV Illustration">
+  </div>
+  <p style="text-align:center;">
+    <a href="my cv.pdf" target="_blank" 
+       style="background:#a6c1ee; color:white; padding:12px 25px; 
+              border-radius:30px; text-decoration:none; font-weight:600; 
+              box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
+      📄 View / Download My CV
+    </a>
+  </p>
+</section>
   <footer>
     <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
     <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
@@ -277,6 +290,7 @@
   </script>
 </body>
 </html>
+
 
 
 
