--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <img src="images/resume-bro.svg" alt="CV Illustration">
   </div>
   <p style="text-align:center;">
-    <a href="my cv .pdf" target="_blank" 
+    <a href="My_c .pdf" target="_blank" 
        style="background:#a6c1ee; color:white; padding:12px 25px; 
               border-radius:30px; text-decoration:none; font-weight:600; 
               box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
@@ -290,6 +290,7 @@
   </script>
 </body>
 </html>
+
 
 
 
