--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <section id="cv" data-aos="fade-up">
   <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
   <div class="illustration">
-    <img src="images/resume-bro.svg" alt="CV Illustration">
+    <img src="Resume folder-bro.svg" alt="CV Illustration">
   </div>
   <p style="text-align:center;">
     <a href="My_c .pdf" target="_blank" 
@@ -290,6 +290,7 @@
   </script>
 </body>
 </html>
+
 
 
 
