--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+ 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +17,6 @@
       margin: 0;
       padding: 0;
       color: #444;
-      transition: background 0.3s, color 0.3s;
     }
     header {
       background: linear-gradient(270deg, #fbc2eb, #a6c1ee, #fbc2eb);
@@ -24,7 +25,6 @@
       text-align: center;
       padding: 50px 20px;
       color: white;
-      position: relative;
     }
     @keyframes gradientMove {
       0% {background-position: 0% 50%;}
@@ -39,34 +39,35 @@
       margin: 10px 0 0;
       font-size: 1.1em;
     }
-    /* Dark mode */
-    body.dark-mode {
-      background-color: #1e1e1e;
-      color: #eee;
-    }
-    body.dark-mode nav {
-      background: #2a2a2a;
-    }
-    body.dark-mode section {
-      background: #2a2a2a;
-      color: #eee;
-    }
-    #darkToggle {
-      position: absolute;
-      top: 20px;
-      right: 20px;
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
       background: #fff;
-      border: none;
-      border-radius: 50%;
-      padding: 10px;
-      cursor: pointer;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.2);
-      transition: transform 0.3s, background 0.3s;
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-    #darkToggle:hover {
-      transform: scale(1.1);
-      background: #fbc2eb;
-      color: #fff;
+    nav a {
+      text-decoration: none;
+      color: #666;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: color 0.3s;
+    }
+    nav a i {
+      transition: transform 0.3s, color 0.3s;
+    }
+    nav a:hover {
+      color: #a6c1ee;
+    }
+    nav a:hover i {
+      transform: rotate(10deg) scale(1.2);
+      color: #fbc2eb;
     }
     section {
       max-width: 900px;
@@ -147,46 +148,6 @@
       font-size: 1.2em;
       font-weight: 600;
     }
-    /* Contact form */
-    .contact-form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    .contact-form input, .contact-form textarea {
-      padding: 12px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-family: inherit;
-    }
-    .contact-form button {
-      background: #a6c1ee;
-      color: #fff;
-      border: none;
-      padding: 12px;
-      border-radius: 10px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: 0.3s;
-    }
-    .contact-form button:hover {
-      background: #fbc2eb;
-    }
-    /* Testimonials */
-    .testimonials {
-      display: grid;
-      gap: 20px;
-    }
-    .testimonial {
-      background: #f9f9f9;
-      padding: 15px;
-      border-radius: 15px;
-      font-style: italic;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.05);
-    }
-    body.dark-mode .testimonial {
-      background: #333;
-    }
   </style>
 </head>
 <body>
@@ -194,8 +155,6 @@
     <h1>Bouziani Imane</h1>
     <p id="typing"></p>
     <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
-    <!-- Dark mode toggle -->
-    <button id="darkToggle"><i class="fa-solid fa-moon"></i></button>
   </header>
 
   <nav>
@@ -205,48 +164,92 @@
     <a href="#languages"><i class="fa-solid fa-language"></i> Languages</a>
     <a href="#activities"><i class="fa-solid fa-star"></i> Activities</a>
     <a href="#qualities"><i class="fa-solid fa-heart"></i> Qualities</a>
-    <a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a>
-    <a href="#testimonials"><i class="fa-solid fa-comment"></i> Testimonials</a>
   </nav>
 
-  <!-- Your existing sections remain unchanged -->
+  <section id="education" data-aos="fade-up">
+    <h2><i class="fa-solid fa-graduation-cap"></i> Education</h2>
+    <div class="illustration"><img src="images/college project-bro.svg" alt="Education"></div>
+    <ul>
+      <li>Master in Artificial Intelligence – With Distinction -2025</li>
+      <li>Bachelor in Computer Science – Information Systems -2023</li>
+      <li>Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles -2023</li>
+      <li>STEAM Certification – Designing Creative Educational Programs for Learners-2023</li>
+    </ul>
+  </section>
 
-  <section id="cv" data-aos="fade-up">
-    <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
+  <section id="experience" data-aos="fade-up">
+    <h2><i class="fa-solid fa-briefcase"></i> Professional Experience</h2>
+    <div class="illustration"><img src="images/Pair programming-bro.svg" alt="Work"></div>
+    <ul>
+      <li>IT Specialist – ZHONGMA International Construction (2023 – 2025)</li>
+      <li>IT Specialist – Private Neurology Clinic (2024 – 2025)</li>
+      <li>Internship in Medical Imaging – Private Radiology Clinic (2025)</li>
+      <li>STEAM & Programming Lecturer – University (2022 – 2023)</li>
+      <li>Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
+      <li>Medical equipment operator specialized in neurology for 03 years </li>
+      <li>Pharmacy Assistant and Operations Manager </li>
+    </ul>
+  </section>
+
+  <section id="skills" data-aos="fade-up">
+    <h2><i class="fa-solid fa-laptop-code"></i> Technical Skills</h2>
+    <div class="illustration"><img src="images/Data extraction-amico.svg" alt="Skills"></div>
+    <ul>
+      <li>Languages: Python, Java, C/C++, Dart, Swift, R, MATLAB, SQL, HTML, CSS, JavaScript</li>
+      <li>AI & Data Science: TensorFlow, PyTorch, Keras, Scikit-Learn, OpenCV...</li>
+      <li>Databases: MySQL, Oracle, SQL Server</li>
+      <li>3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
+      <li>Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
+    </ul>
+  </section>
+
+  <section id="languages" data-aos="fade-up">
+    <h2><i class="fa-solid fa-language"></i> Languages</h2>
+    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Languages"></div>
+    <ul>
+      <li>Arabic: Native</li>
+      <li>English: Advanced</li>
+      <li>French: Professional</li>
+    </ul>
+  </section>
+
+  <section id="activities" data-aos="fade-up">
+    <h2><i class="fa-solid fa-star"></i> Activities & Achievements</h2>
     <div class="illustration">
-      <img src="Resume folder-bro.svg" alt="CV Illustration">
+      <img src="images/people creating robot-bro.svg" alt="Activity 1">
+      <img src="images/Kids Studying from Home-bro.svg" alt="Activity 2">
+      <img src="images/Doctor-bro.svg" alt="Activity 3">
     </div>
-    <p style="text-align:center;">
-      <a href="My_c .pdf" target="_blank" 
-         style="background:#a6c1ee; color:white; padding:12px 25px; 
-                border-radius:30px; text-decoration:none; font-weight:600; 
-                box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
-        📄 View / Download My CV
-      </a>
-    </p>
+    <ul>
+      <li>Participation in international hackathons (AI, Robotics, Data Science)</li>
+      <li>Organization of AI & Programming workshops for different proficiency levels</li>
+      <li>Development and creation of educational 3D games using Unreal Engine and Unity 3D</li>
+      <li>Design of AI-powered diagnostic systems using medical imaging </li>
+      <li>Development of professional websites, web pages, and inventory management softwares </li>
+    </ul>
   </section>
 
-  <!-- Testimonials Section -->
-  <section id="testimonials" data-aos="fade-up">
-    <h2><i class="fa-solid fa-comment"></i> Testimonials</h2>
-    <div class="testimonials">
-      <div class="testimonial">"Imane is a highly dedicated and creative engineer who always delivers outstanding results."</div>
-      <div class="testimonial">"Her leadership and vision in AI projects make her a remarkable professional."</div>
-      <div class="testimonial">"Working with her is inspiring — she combines technical excellence with strong teamwork."</div>
-    </div>
+  <section id="qualities" data-aos="fade-up">
+    <h2><i class="fa-solid fa-heart"></i> Professional Qualities</h2>
+    <div class="illustration"><img src="images/Blog post-bro.svg" alt="Qualities"></div>
+    <ul>
+      <li>Independent │ Creative │ Rigorous │ Dynamic │ Team Spirit │ Analytical</li>
+    </ul>
   </section>
-
-  <!-- Contact Section -->
-  <section id="contact" data-aos="fade-up">
-    <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
-    <form class="contact-form" action="https://formspree.io/f/mzzbvnya" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="_replyto" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
+<section id="cv" data-aos="fade-up">
+  <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
+  <div class="illustration">
+    <img src="Resume folder-bro.svg" alt="CV Illustration">
+  </div>
+  <p style="text-align:center;">
+    <a href="My_c .pdf" target="_blank" 
+       style="background:#a6c1ee; color:white; padding:12px 25px; 
+              border-radius:30px; text-decoration:none; font-weight:600; 
+              box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
+      📄 View / Download My CV
+    </a>
+  </p>
+</section>
   <footer>
     <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
     <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
@@ -286,11 +289,12 @@
       }
     };
     btn.onclick = () => window.scrollTo({ top: 0, behavior: "smooth" });
-
-    // Dark mode toggle
-    document.getElementById("darkToggle").onclick = () => {
-      document.body.classList.toggle("dark-mode");
-    };
   </script>
 </body>
 </html>
+
+
+
+
+
+
