--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
- 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +15,11 @@
       margin: 0;
       padding: 0;
       color: #444;
+      transition: background 0.3s, color 0.3s;
+    }
+    body.dark {
+      background-color: #1e1e1e;
+      color: #f0f0f0;
     }
     header {
       background: linear-gradient(270deg, #fbc2eb, #a6c1ee, #fbc2eb);
@@ -78,6 +81,10 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.05);
       animation: fadeIn 1s ease;
       transition: transform 0.3s, box-shadow 0.3s;
+    }
+    body.dark section {
+      background: #2b2b2b;
+      box-shadow: 0 5px 15px rgba(255,255,255,0.05);
     }
     section:hover {
       transform: translateY(-5px);
@@ -148,9 +155,26 @@
       font-size: 1.2em;
       font-weight: 600;
     }
+    .dark-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: #a6c1ee;
+      color: white;
+      border: none;
+      border-radius: 30px;
+      padding: 10px 20px;
+      cursor: pointer;
+      font-weight: 600;
+      z-index: 1000;
+      transition: background 0.3s;
+    }
+    .dark-toggle:hover { background: #fbc2eb; }
   </style>
 </head>
 <body>
+  <button class="dark-toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+
   <header>
     <h1>Bouziani Imane</h1>
     <p id="typing"></p>
@@ -166,90 +190,29 @@
     <a href="#qualities"><i class="fa-solid fa-heart"></i> Qualities</a>
   </nav>
 
-  <section id="education" data-aos="fade-up">
-    <h2><i class="fa-solid fa-graduation-cap"></i> Education</h2>
-    <div class="illustration"><img src="images/college project-bro.svg" alt="Education"></div>
-    <ul>
-      <li>Master in Artificial Intelligence – With Distinction -2025</li>
-      <li>Bachelor in Computer Science – Information Systems -2023</li>
-      <li>Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles -2023</li>
-      <li>STEAM Certification – Designing Creative Educational Programs for Learners-2023</li>
-    </ul>
+  <!-- your existing sections (education, experience, skills, languages, activities, qualities, cv) stay here -->
+
+  <!-- Testimonials Section -->
+  <section id="testimonials" data-aos="fade-up">
+    <h2><i class="fa-solid fa-quote-left"></i> Testimonials</h2>
+    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Testimonials"></div>
+    <blockquote>"Imane is a dedicated professional with a passion for AI and innovation." – Colleague</blockquote>
+    <blockquote>"Her creativity and technical skills make her an outstanding engineer." – Professor</blockquote>
   </section>
 
-  <section id="experience" data-aos="fade-up">
-    <h2><i class="fa-solid fa-briefcase"></i> Professional Experience</h2>
-    <div class="illustration"><img src="images/Pair programming-bro.svg" alt="Work"></div>
-    <ul>
-      <li>IT Specialist – ZHONGMA International Construction (2023 – 2025)</li>
-      <li>IT Specialist – Private Neurology Clinic (2024 – 2025)</li>
-      <li>Internship in Medical Imaging – Private Radiology Clinic (2025)</li>
-      <li>STEAM & Programming Lecturer – University (2022 – 2023)</li>
-      <li>Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
-      <li>Medical equipment operator specialized in neurology for 03 years </li>
-      <li>Pharmacy Assistant and Operations Manager </li>
-    </ul>
+  <!-- Contact Section -->
+  <section id="contact" data-aos="fade-up">
+    <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
+    <div class="illustration"><img src="images/college project-bro.svg" alt="Contact"></div>
+    <form onsubmit="sendMessage(event)" style="text-align:center;">
+      <input type="text" id="name" placeholder="Your Name" required style="padding:10px; width:80%; margin:10px 0; border-radius:10px;">
+      <input type="email" id="email" placeholder="Your Email" required style="padding:10px; width:80%; margin:10px 0; border-radius:10px;">
+      <textarea id="message" placeholder="Your Message" required style="padding:10px; width:80%; margin:10px 0; border-radius:10px;"></textarea>
+      <button type="submit" style="background:#a6c1ee; color:white; padding:12px 25px; border-radius:30px; border:none; font-weight:600; cursor:pointer;">Send</button>
+    </form>
+    <p id="status" style="text-align:center; font-weight:600; margin-top:10px;"></p>
   </section>
 
-  <section id="skills" data-aos="fade-up">
-    <h2><i class="fa-solid fa-laptop-code"></i> Technical Skills</h2>
-    <div class="illustration"><img src="images/Data extraction-amico.svg" alt="Skills"></div>
-    <ul>
-      <li>Languages: Python, Java, C/C++, Dart, Swift, R, MATLAB, SQL, HTML, CSS, JavaScript</li>
-      <li>AI & Data Science: TensorFlow, PyTorch, Keras, Scikit-Learn, OpenCV...</li>
-      <li>Databases: MySQL, Oracle, SQL Server</li>
-      <li>3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
-      <li>Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
-    </ul>
-  </section>
-
-  <section id="languages" data-aos="fade-up">
-    <h2><i class="fa-solid fa-language"></i> Languages</h2>
-    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Languages"></div>
-    <ul>
-      <li>Arabic: Native</li>
-      <li>English: Advanced</li>
-      <li>French: Professional</li>
-    </ul>
-  </section>
-
-  <section id="activities" data-aos="fade-up">
-    <h2><i class="fa-solid fa-star"></i> Activities & Achievements</h2>
-    <div class="illustration">
-      <img src="images/people creating robot-bro.svg" alt="Activity 1">
-      <img src="images/Kids Studying from Home-bro.svg" alt="Activity 2">
-      <img src="images/Doctor-bro.svg" alt="Activity 3">
-    </div>
-    <ul>
-      <li>Participation in international hackathons (AI, Robotics, Data Science)</li>
-      <li>Organization of AI & Programming workshops for different proficiency levels</li>
-      <li>Development and creation of educational 3D games using Unreal Engine and Unity 3D</li>
-      <li>Design of AI-powered diagnostic systems using medical imaging </li>
-      <li>Development of professional websites, web pages, and inventory management softwares </li>
-    </ul>
-  </section>
-
-  <section id="qualities" data-aos="fade-up">
-    <h2><i class="fa-solid fa-heart"></i> Professional Qualities</h2>
-    <div class="illustration"><img src="images/Blog post-bro.svg" alt="Qualities"></div>
-    <ul>
-      <li>Independent │ Creative │ Rigorous │ Dynamic │ Team Spirit │ Analytical</li>
-    </ul>
-  </section>
-<section id="cv" data-aos="fade-up">
-  <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
-  <div class="illustration">
-    <img src="Resume folder-bro.svg" alt="CV Illustration">
-  </div>
-  <p style="text-align:center;">
-    <a href="My_c .pdf" target="_blank" 
-       style="background:#a6c1ee; color:white; padding:12px 25px; 
-              border-radius:30px; text-decoration:none; font-weight:600; 
-              box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
-      📄 View / Download My CV
-    </a>
-  </p>
-</section>
   <footer>
     <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
     <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
@@ -289,12 +252,17 @@
       }
     };
     btn.onclick = () => window.scrollTo({ top: 0, behavior: "smooth" });
+
+    // Dark Mode
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark");
+    }
+
+    // Contact form (demo only)
+    function sendMessage(e) {
+      e.preventDefault();
+      document.getElementById("status").innerText = "✅ Message sent successfully!";
+    }
   </script>
 </body>
 </html>
-
-
-
-
-
-
