--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,21 +16,6 @@
       margin: 0;
       padding: 0;
       color: #444;
-      transition: background 0.3s, color 0.3s;
-    }
-    body.dark-mode {
-      background-color: #1e1e1e;
-      color: #ddd;
-    }
-    body.dark-mode nav {
-      background: #2c2c2c;
-    }
-    body.dark-mode section {
-      background: #2c2c2c;
-      color: #ddd;
-    }
-    body.dark-mode footer {
-      background: linear-gradient(120deg, #333 0%, #444 100%);
     }
     header {
       background: linear-gradient(270deg, #fbc2eb, #a6c1ee, #fbc2eb);
@@ -90,7 +76,7 @@
       border-radius: 20px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.05);
       animation: fadeIn 1s ease;
-      transition: transform 0.3s, box-shadow 0.3s, background 0.3s, color 0.3s;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
     section:hover {
       transform: translateY(-5px);
@@ -139,7 +125,6 @@
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
       animation: fadeIn 1.5s ease-in;
-      transition: background 0.3s;
     }
     #topBtn {
       display: none;
@@ -162,22 +147,6 @@
       font-size: 1.2em;
       font-weight: 600;
     }
-    #darkModeBtn {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: #444;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 30px;
-      cursor: pointer;
-      z-index: 1000;
-      transition: background 0.3s;
-    }
-    #darkModeBtn:hover {
-      background: #a6c1ee;
-    }
   </style>
 </head>
 <body>
@@ -186,9 +155,6 @@
     <p id="typing"></p>
     <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
   </header>
-
-  <!-- Dark Mode Button -->
-  <button id="darkModeBtn">🌙 Dark Mode</button>
 
   <nav>
     <a href="#education"><i class="fa-solid fa-graduation-cap"></i> Education</a>
@@ -199,7 +165,99 @@
     <a href="#qualities"><i class="fa-solid fa-heart"></i> Qualities</a>
   </nav>
 
-  <!-- rest of your code remains the same -->
+  <section id="education" data-aos="fade-up">
+    <h2><i class="fa-solid fa-graduation-cap"></i> Education</h2>
+    <div class="illustration"><img src="images/college project-bro.svg" alt="Education"></div>
+    <ul>
+      <li>Master in Artificial Intelligence – With Distinction -2025</li>
+      <li>Bachelor in Computer Science – Information Systems -2023</li>
+      <li>Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles -2023</li>
+      <li>STEAM Certification – Designing Creative Educational Programs for Learners-2023</li>
+    </ul>
+  </section>
+
+  <section id="experience" data-aos="fade-up">
+    <h2><i class="fa-solid fa-briefcase"></i> Professional Experience</h2>
+    <div class="illustration"><img src="images/Pair programming-bro.svg" alt="Work"></div>
+    <ul>
+      <li>IT Specialist – ZHONGMA International Construction (2023 – 2025)</li>
+      <li>IT Specialist – Private Neurology Clinic (2024 – 2025)</li>
+      <li>Internship in Medical Imaging – Private Radiology Clinic (2025)</li>
+      <li>STEAM & Programming Lecturer – University (2022 – 2023)</li>
+      <li>Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
+      <li>Medical equipment operator specialized in neurology for 03 years </li>
+      <li>Pharmacy Assistant and Operations Manager </li>
+    </ul>
+  </section>
+
+  <section id="skills" data-aos="fade-up">
+    <h2><i class="fa-solid fa-laptop-code"></i> Technical Skills</h2>
+    <div class="illustration"><img src="images/Data extraction-amico.svg" alt="Skills"></div>
+    <ul>
+      <li>Languages: Python, Java, C/C++, Dart, Swift, R, MATLAB, SQL, HTML, CSS, JavaScript</li>
+      <li>AI & Data Science: TensorFlow, PyTorch, Keras, Scikit-Learn, OpenCV...</li>
+      <li>Databases: MySQL, Oracle, SQL Server</li>
+      <li>3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
+      <li>Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
+    </ul>
+  </section>
+
+  <section id="languages" data-aos="fade-up">
+    <h2><i class="fa-solid fa-language"></i> Languages</h2>
+    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Languages"></div>
+    <ul>
+      <li>Arabic: Native</li>
+      <li>English: Advanced</li>
+      <li>French: Professional</li>
+    </ul>
+  </section>
+
+  <section id="activities" data-aos="fade-up">
+    <h2><i class="fa-solid fa-star"></i> Activities & Achievements</h2>
+    <div class="illustration">
+      <img src="images/people creating robot-bro.svg" alt="Activity 1">
+      <img src="images/Kids Studying from Home-bro.svg" alt="Activity 2">
+      <img src="images/Doctor-bro.svg" alt="Activity 3">
+    </div>
+    <ul>
+      <li>Participation in international hackathons (AI, Robotics, Data Science)</li>
+      <li>Organization of AI & Programming workshops for different proficiency levels</li>
+      <li>Development and creation of educational 3D games using Unreal Engine and Unity 3D</li>
+      <li>Design of AI-powered diagnostic systems using medical imaging </li>
+      <li>Development of professional websites, web pages, and inventory management softwares </li>
+    </ul>
+  </section>
+
+  <section id="qualities" data-aos="fade-up">
+    <h2><i class="fa-solid fa-heart"></i> Professional Qualities</h2>
+    <div class="illustration"><img src="images/Blog post-bro.svg" alt="Qualities"></div>
+    <ul>
+      <li>Independent │ Creative │ Rigorous │ Dynamic │ Team Spirit │ Analytical</li>
+    </ul>
+  </section>
+<section id="cv" data-aos="fade-up">
+  <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
+  <div class="illustration">
+    <img src="Resume folder-bro.svg" alt="CV Illustration">
+  </div>
+  <p style="text-align:center;">
+    <a href="My_c .pdf" target="_blank" 
+       style="background:#a6c1ee; color:white; padding:12px 25px; 
+              border-radius:30px; text-decoration:none; font-weight:600; 
+              box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
+      📄 View / Download My CV
+    </a>
+  </p>
+</section>
+  <footer>
+    <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
+    <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
+      Thanks to my mom and dad for their endless love and support 🤍
+    </p>
+  </footer>
+  <footer>
+    <p>@ Bouziani Imane.com - 2025</p>
+  </footer>
 
   <button id="topBtn"><i class="fa-solid fa-arrow-up"></i></button>
 
@@ -230,13 +288,12 @@
       }
     };
     btn.onclick = () => window.scrollTo({ top: 0, behavior: "smooth" });
-
-    // Dark mode toggle
-    const darkBtn = document.getElementById("darkModeBtn");
-    darkBtn.addEventListener("click", () => {
-      document.body.classList.toggle("dark-mode");
-      darkBtn.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
-    });
   </script>
 </body>
 </html>
+
+
+
+
+
+
