--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +15,7 @@
       margin: 0;
       padding: 0;
       color: #444;
+      transition: background 0.5s, color 0.5s;
     }
     header {
       background: linear-gradient(270deg, #fbc2eb, #a6c1ee, #fbc2eb);
@@ -24,6 +24,7 @@
       text-align: center;
       padding: 50px 20px;
       color: white;
+      transition: background 0.5s;
     }
     @keyframes gradientMove {
       0% {background-position: 0% 50%;}
@@ -48,6 +49,7 @@
       position: sticky;
       top: 0;
       z-index: 100;
+      transition: background 0.5s;
     }
     nav a {
       text-decoration: none;
@@ -76,7 +78,7 @@
       border-radius: 20px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.05);
       animation: fadeIn 1s ease;
-      transition: transform 0.3s, box-shadow 0.3s;
+      transition: transform 0.3s, box-shadow 0.3s, background 0.5s, color 0.5s;
     }
     section:hover {
       transform: translateY(-5px);
@@ -125,6 +127,7 @@
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
       animation: fadeIn 1.5s ease-in;
+      transition: background 0.5s;
     }
     #topBtn {
       display: none;
@@ -147,6 +150,42 @@
       font-size: 1.2em;
       font-weight: 600;
     }
+
+    /* 🌙 Dark mode styles */
+    body.dark-mode {
+      background-color: #1e1e1e;
+      color: #f5f5f5;
+    }
+    body.dark-mode nav {
+      background: #2c2c2c;
+    }
+    body.dark-mode nav a {
+      color: #ddd;
+    }
+    body.dark-mode section {
+      background: #2c2c2c;
+      color: #f5f5f5;
+    }
+    body.dark-mode footer {
+      background: linear-gradient(120deg, #3a3a3a 0%, #1e1e1e 100%);
+    }
+    #darkBtn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: #444;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: background 0.3s;
+      z-index: 1000;
+    }
+    #darkBtn:hover {
+      background: #a6c1ee;
+    }
   </style>
 </head>
 <body>
@@ -156,6 +195,9 @@
     <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
   </header>
 
+  <!-- 🌙 Dark Mode Button -->
+  <button id="darkBtn"><i class="fa-solid fa-moon"></i> Dark Mode</button>
+
   <nav>
     <a href="#education"><i class="fa-solid fa-graduation-cap"></i> Education</a>
     <a href="#experience"><i class="fa-solid fa-briefcase"></i> Experience</a>
@@ -163,6 +205,7 @@
     <a href="#languages"><i class="fa-solid fa-language"></i> Languages</a>
     <a href="#activities"><i class="fa-solid fa-star"></i> Activities</a>
     <a href="#qualities"><i class="fa-solid fa-heart"></i> Qualities</a>
+    <a href="#cv"><i class="fa-solid fa-file-pdf"></i> CV</a>
   </nav>
 
   <section id="education" data-aos="fade-up">
@@ -235,20 +278,22 @@
       <li>Independent │ Creative │ Rigorous │ Dynamic │ Team Spirit │ Analytical</li>
     </ul>
   </section>
-<section id="cv" data-aos="fade-up">
-  <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
-  <div class="illustration">
-    <img src="Resume folder-bro.svg" alt="CV Illustration">
-  </div>
-  <p style="text-align:center;">
-    <a href="My_c .pdf" target="_blank" 
-       style="background:#a6c1ee; color:white; padding:12px 25px; 
-              border-radius:30px; text-decoration:none; font-weight:600; 
-              box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
-      📄 View / Download My CV
-    </a>
-  </p>
-</section>
+
+  <section id="cv" data-aos="fade-up">
+    <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
+    <div class="illustration">
+      <img src="images/Resume folder-bro.svg" alt="CV Illustration">
+    </div>
+    <p style="text-align:center;">
+      <a href="images/My_cv.pdf" target="_blank" 
+         style="background:#a6c1ee; color:white; padding:12px 25px; 
+                border-radius:30px; text-decoration:none; font-weight:600; 
+                box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
+        📄 View / Download My CV
+      </a>
+    </p>
+  </section>
+
   <footer>
     <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
     <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
@@ -288,12 +333,18 @@
       }
     };
     btn.onclick = () => window.scrollTo({ top: 0, behavior: "smooth" });
+
+    // 🌙 Dark mode toggle
+    const darkBtn = document.getElementById("darkBtn");
+    darkBtn.onclick = () => {
+      document.body.classList.toggle("dark-mode");
+      if (document.body.classList.contains("dark-mode")) {
+        darkBtn.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
+      } else {
+        darkBtn.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
+      }
+    };
   </script>
 </body>
 </html>
-
-
-
-
-
 
