--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
   <section id="cv" data-aos="fade-up">
     <h2><i class="fa-solid fa-file-pdf"></i> My CV</h2>
     <div class="illustration">
-      <img src="images/Resume folder-bro.svg" alt="CV Illustration">
+      <img src="Resume folder-bro.svg" alt="CV Illustration">
     </div>
     <p style="text-align:center;">
       <a href="images/My_cv.pdf" target="_blank" 
@@ -347,4 +347,5 @@
   </script>
 </body>
 </html>
+
 
