--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <img src="Resume folder-bro.svg" alt="CV Illustration">
     </div>
     <p style="text-align:center;">
-      <a href="images/My_cv.pdf" target="_blank" 
+      <a href="My_c .pdf" target="_blank" 
          style="background:#a6c1ee; color:white; padding:12px 25px; 
                 border-radius:30px; text-decoration:none; font-weight:600; 
                 box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
@@ -347,5 +347,6 @@
   </script>
 </body>
 </html>
+
 
 
