--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Bouziani Imane - Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <!-- AOS Animations -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
   <style>
     body {
@@ -31,14 +30,8 @@
       50% {background-position: 100% 50%;}
       100% {background-position: 0% 50%;}
     }
-    header h1 {
-      font-size: 2.5em;
-      margin: 0;
-    }
-    header p {
-      margin: 10px 0 0;
-      font-size: 1.1em;
-    }
+    header h1 { font-size: 2.5em; margin: 0; }
+    header p { margin: 10px 0 0; font-size: 1.1em; }
     nav {
       display: flex;
       justify-content: center;
@@ -60,16 +53,9 @@
       gap: 8px;
       transition: color 0.3s;
     }
-    nav a i {
-      transition: transform 0.3s, color 0.3s;
-    }
-    nav a:hover {
-      color: #a6c1ee;
-    }
-    nav a:hover i {
-      transform: rotate(10deg) scale(1.2);
-      color: #fbc2eb;
-    }
+    nav a i { transition: transform 0.3s, color 0.3s; }
+    nav a:hover { color: #a6c1ee; }
+    nav a:hover i { transform: rotate(10deg) scale(1.2); color: #fbc2eb; }
     section {
       max-width: 900px;
       margin: 50px auto;
@@ -84,39 +70,13 @@
       transform: translateY(-5px);
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
     }
-    section h2 {
-      color: #a6c1ee;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    ul li::before {
-      content: ' | ';
-      margin-right: 10px;
-    }
-    .illustration {
-      text-align: center;
-      margin: 20px 0;
-    }
-    .illustration img {
-      max-width: 300px;
-      border-radius: 15px;
-      animation: floating 4s ease-in-out infinite;
-    }
-    @keyframes floating {
-      0%   { transform: translateY(0px); }
-      50%  { transform: translateY(-15px); }
-      100% { transform: translateY(0px); }
-    }
+    section h2 { color: #a6c1ee; display: flex; align-items: center; gap: 10px; margin-bottom: 20px; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+    ul { list-style: none; padding: 0; }
+    ul li::before { content: ' | '; margin-right: 10px; }
+    .illustration { text-align: center; margin: 20px 0; }
+    .illustration img { max-width: 300px; border-radius: 15px; animation: floating 4s ease-in-out infinite; }
+    @keyframes floating { 0% { transform: translateY(0px); } 50% { transform: translateY(-15px); } 100% { transform: translateY(0px); } }
     footer {
       text-align: center;
       padding: 20px;
@@ -145,30 +105,14 @@
       z-index: 999;
     }
     #topBtn:hover { background: #fbc2eb; }
-    #typing {
-      margin-top: 10px;
-      font-size: 1.2em;
-      font-weight: 600;
-    }
+    #typing { margin-top: 10px; font-size: 1.2em; font-weight: 600; }
 
-    /* 🌙 Dark mode styles */
-    body.dark-mode {
-      background-color: #1e1e1e;
-      color: #f5f5f5;
-    }
-    body.dark-mode nav {
-      background: #2c2c2c;
-    }
-    body.dark-mode nav a {
-      color: #ddd;
-    }
-    body.dark-mode section {
-      background: #2c2c2c;
-      color: #f5f5f5;
-    }
-    body.dark-mode footer {
-      background: linear-gradient(120deg, #3a3a3a 0%, #1e1e1e 100%);
-    }
+    body.dark-mode { background-color: #1e1e1e; color: #f5f5f5; }
+    body.dark-mode nav { background: #2c2c2c; }
+    body.dark-mode nav a { color: #ddd; }
+    body.dark-mode section { background: #2c2c2c; color: #f5f5f5; }
+    body.dark-mode footer { background: linear-gradient(120deg, #3a3a3a 0%, #1e1e1e 100%); }
+
     #darkBtn {
       position: fixed;
       top: 20px;
@@ -183,9 +127,39 @@
       transition: background 0.3s;
       z-index: 1000;
     }
-    #darkBtn:hover {
-      background: #a6c1ee;
+    #darkBtn:hover { background: #a6c1ee; }
+
+    /* Contact Form Styles */
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 600px;
+      margin: 0 auto;
     }
+    .contact-form input, .contact-form textarea {
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      font-family: 'Quicksand', sans-serif;
+      font-size: 1em;
+      transition: border 0.3s;
+    }
+    .contact-form input:focus, .contact-form textarea:focus {
+      border-color: #a6c1ee;
+      outline: none;
+    }
+    .contact-form button {
+      padding: 12px 20px;
+      border: none;
+      border-radius: 30px;
+      background: #a6c1ee;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .contact-form button:hover { background: #fbc2eb; }
   </style>
 </head>
 <body>
@@ -195,7 +169,6 @@
     <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
   </header>
 
-  <!-- 🌙 Dark Mode Button -->
   <button id="darkBtn"><i class="fa-solid fa-moon"></i> Dark Mode</button>
 
   <nav>
@@ -206,6 +179,7 @@
     <a href="#activities"><i class="fa-solid fa-star"></i> Activities</a>
     <a href="#qualities"><i class="fa-solid fa-heart"></i> Qualities</a>
     <a href="#cv"><i class="fa-solid fa-file-pdf"></i> CV</a>
+    <a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a>
   </nav>
 
   <section id="education" data-aos="fade-up">
@@ -294,6 +268,19 @@
     </p>
   </section>
 
+  <!-- Contact Form Section -->
+  <section id="contact" data-aos="fade-up">
+    <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
+    <div class="illustration"><img src="images/Contact-bro.svg" alt="Contact"></div>
+    <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
+    </form>
+  </section>
+
   <footer>
     <h3 style="margin-top:20px; color:white; font-weight:600;">Acknowledgments</h3>
     <p style="font-size: 0.9em; margin-top: 8px; opacity: 0.9;">
@@ -306,7 +293,6 @@
 
   <button id="topBtn"><i class="fa-solid fa-arrow-up"></i></button>
 
-  <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({ duration: 1000, once: true });
@@ -334,7 +320,7 @@
     };
     btn.onclick = () => window.scrollTo({ top: 0, behavior: "smooth" });
 
-    // 🌙 Dark mode toggle
+    // Dark mode toggle
     const darkBtn = document.getElementById("darkBtn");
     darkBtn.onclick = () => {
       document.body.classList.toggle("dark-mode");
@@ -347,6 +333,3 @@
   </script>
 </body>
 </html>
-
-
-
