--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   <!-- Contact Form Section -->
   <section id="contact" data-aos="fade-up">
     <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
-    <div class="illustration"><img src="images/Contact-bro.svg" alt="Contact"></div>
+    <div class="illustration"><img src="Contact us-bro.svg" alt="Contact"></div>
     <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
       <input type="text" name="name" placeholder="Your Name" required>
@@ -333,3 +333,4 @@
   </script>
 </body>
 </html>
+
