--- a/index.html
+++ b/index.html
@@ -270,15 +270,18 @@
 
   <!-- Contact Form Section -->
   <section id="contact" data-aos="fade-up">
-    <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
-    <div class="illustration"><img src="Contact us-bro.svg" alt="Contact"></div>
-    <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
-      <input type="hidden" name="_captcha" value="false">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
-    </form>
+  <h2><i class="fa-solid fa-envelope"></i> Contact Me</h2>
+  <div class="illustration">
+    <img src="images/contact-bro.svg" alt="Contact">
+  </div>
+  <form class="contact-form" action="https://formsubmit.co/bouzianiimane1@gmail.com" method="POST">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://bouzianiimane.github.io/">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
+  </form>
   </section>
 
   <footer>
@@ -333,4 +336,5 @@
   </script>
 </body>
 </html>
+
 
